# xiaohongshu-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  功能.md
docs/: architecture.md  glossary.md  tech-decisions.md
docs/prompts/: continue-feature.md  review-feature.md  revise-spec.md  start-feature.md
scripts/: smoke_test.py
skills/copy-rewrite/: SKILL.md
skills/image-analysis/: SKILL.md  config.example.json
skills/image-generation/: SKILL.md  config.example.json
skills/pattern-summary/: SKILL.md
skills/selection-polish/: SKILL.md
skills/xiaohongshu-skills/: SKILL.md
specs/000-foundation/: acceptance.md  spec.md  tasks.md
specs/001-topic-workspace/: acceptance.md  spec.md  tasks.md
specs/002-candidate-posts/: acceptance.md  spec.md  tasks.md
specs/003-content-creation/: acceptance.md  spec.md  tasks.md
specs/004-conversation-timeline/: acceptance.md  spec.md  tasks.md
specs/005-home-entry/: acceptance.md  spec.md  tasks.md
specs/006-skills-page/: acceptance.md  spec.md  tasks.md
specs/007-image-editor-frontend/: acceptance.md  spec.md  tasks.md
specs/008-image-lightbox-preview/: acceptance.md  spec.md  tasks.md
specs/010-agent-runtime-foundation/: acceptance.md  spec.md  tasks.md
specs/011-session-history-core/: acceptance.md  spec.md  tasks.md
specs/012-context-memory-core/: acceptance.md  spec.md  tasks.md
specs/013-agent-loop-runner/: acceptance.md  spec.md  tasks.md
src/agent/: context_builder.py  (+7 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+143 files in other folders)
